--- a/docs/config/logging.ini
+++ b/docs/config/logging.ini
@@ -1,17 +1,17 @@
-[log]
-level= debug
-log_stdout=True
-log_stderr=False
+[LOG]
+Level= debug
+LogStdout=True
+LogStderr=False
 
-[log_file]
-enabled=True
-log_path=../logs/
-filename=odapi
-file_extension=.log
-max_file_size=209715200
-max_age_days=1
-max_storage_size=3221225472
-archive_path=../archive/
+[LOG_FILE]
+Enabled=True
+LogPath=../logs/
+FileName=odapi
+FileExtension=.log
+MaxFileSize=209715200
+MaxAgeDays=1
+MaxStorageSize=3221225472
+ArchivePath=../archive/
 
 
 
